...
                        Button(
                            onClick = onStart,
                            enabled = startEnabled,
                            modifier = Modifier
                                .height(72.dp)
                                .width(actionButtonWidth)
                                .testTag("start_button"),
                            contentPadding = actionButtonContentPadding,
                            colors = ButtonDefaults.buttonColors(
                                containerColor = colorScheme.primary,
                                contentColor = colorScheme.onPrimary
                            ),
                            shape = RoundedCornerShape(22.dp)
...
                    } else {
                        Button(
                            onClick = onStop,
                            modifier = Modifier
                                .height(72.dp)
                                .width(actionButtonWidth)
                                .testTag("stop_on_button"),
                            contentPadding = actionButtonContentPadding,
                            colors = ButtonDefaults.buttonColors(
                                containerColor = colorScheme.error,
                                contentColor = colorScheme.onError
                            ),
                            shape = RoundedCornerShape(22.dp)
...
